--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^3.5.2",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^1.3.1",
+    "moment": "^2.18.1",
     "particles.js": "^2.0.0",
     "vue": "^2.2.6",
     "vue-resource": "^1.3.1",
